--- a/components/icons.html
+++ b/components/icons.html
@@ -1,4 +1,4 @@
-<span class="icon--container">
+<span class="icon-container">
   <svg class="icon">
     <use xlink:href="images/sprite.svg#wordpress"></use>
   </svg>
