--- a/css/styles.css
+++ b/css/styles.css
@@ -163,11 +163,20 @@ a {
     height: 40px;
 }
 
+.icon--small {
+    width: 30px;
+    height: 30px;
+}
+
 .icon--primary {
     fill: var(--color-primary);
 }
 
-.icon--container {
+.icon--white {
+    fill: #fff;
+}
+
+.icon-container {
     background: #f3f9fa;
     width: 64px;
     height: 64px;
@@ -176,6 +185,11 @@ a {
     justify-content: center;
     align-items: center;
 }
+
+.icon-container--accent {
+    background: var(--color-accent);
+}
+
 /* \Buttons */
 
 .btn {
@@ -433,5 +447,46 @@ a {
 
     .quote__organization {
         font-size: 1.6rem;
+    }
+}
+
+/* Grids */
+
+.grid {
+    display: grid;
+}
+
+@media screen and (min-width: 768px) {
+    .grid--1x2 {
+        grid-template-columns: 1fr 1fr;
+    }
+}
+
+/* Testimonials */
+.testimonial {
+    padding: 3rem;
+}
+
+.testimonial__image {
+    position: relative;
+}
+
+.testimonial__image > img {
+    width: 100%;
+}
+
+.testimonial__image > .icon-container {
+    position: absolute;
+    top: 3rem;
+    right: -32px;
+}
+
+@media screen and (min-width: 768px) {
+    .testimonial .quote,
+    .testimonial .quote__author {
+        font-size: 2.4rem;
+    }
+    .testimonial .quote {
+        margin-left: 6rem;
     }
 }
