--- a/css/styles.css
+++ b/css/styles.css
@@ -8,7 +8,7 @@
     --color-border: #ccc;
     --border-radius: 30px;
 }
-
+/* Why after and before, if * is already all? */
 *, *::after, *::before {
     box-sizing: border-box;
 }
@@ -246,6 +246,11 @@ a {
 .btn--outline:hover {
     background: var(--color-headings);
     border: 2px solid var(--color-headings);
+}
+
+.btn--stretched {
+    padding-left: 6rem;
+    padding-right: 6rem;
 }
 
 @media screen and (min-width: 1024px) {
@@ -488,5 +493,46 @@ a {
     }
     .testimonial .quote {
         margin-left: 6rem;
+    }
+}
+
+/* Callouts */
+
+.callout {
+    padding: 4rem;
+    border-radius: 5px;
+}
+
+.callout--primary {
+    background: var(--color-primary);
+    color: #fff;
+}
+
+.callout__heading {
+    color: #fff;
+    margin-top: 0;
+    font-size:3rem;
+}
+
+.callout .btn {
+    justify-self: center;
+    align-self: center;
+}
+
+.callout__content {
+    text-align: center;
+}
+
+@media screen and (min-width: 768px) {
+    .callout .grid--1x2 {
+        grid-template-columns: 1fr auto;
+    }
+    .callout__content {
+        text-align: left;
+    }
+
+    .callout .btn {
+        justify-self: start;
+        margin: 0 2rem;
     }
 }
