Review, adding questions and comments.

--- a/components/inputgroups.html
+++ b/components/inputgroups.html
@@ -1,2 +1,3 @@
 <button class="btn btn--accent">Search</button>
 <input class="input" type="text" placeholder="Enter domain name here..." />
+<!-- need to add input-group? -->
