--- a/components/icons.html
+++ b/components/icons.html
@@ -3,3 +3,4 @@
     <use xlink:href="images/sprite.svg#wordpress"></use>
   </svg>
 </span>
+<!-- icon--small, icon--primary, icon--white, icon-container--accent classes available. -->
