--- a/css/styles.css
+++ b/css/styles.css
@@ -61,7 +61,6 @@ p {
     h3 {
         font-size: 2.4rem;
     }
-
 }
 
 /* Links */
@@ -93,7 +92,6 @@ a {
 }
 
 /* Badges */
-
 .badge {
     border-radius: 20px;
     font-size: 2rem;
@@ -134,7 +132,7 @@ a {
     padding-left: 0;
     color: var(--color-headings)
 }
-
+/* no list--inline in list.html */
 .list--inline .list__item {
     display: inline-block;
     margin-right: 2rem;
@@ -157,7 +155,6 @@ a {
 }
 
 /* Icons */
-
 .icon {
     width: 40px;
     height: 40px;
@@ -190,8 +187,7 @@ a {
     background: var(--color-accent);
 }
 
-/* \Buttons */
-
+/* Buttons */
 .btn {
     border-radius: 40px;
     border: 0;
@@ -231,7 +227,7 @@ a {
 .btn--accent:hover {
     background: #ec3000;
 }
-
+/* what is the btn block for? */
 .btn--block {
     width: 100%;
     display: inline-block;
@@ -278,7 +274,7 @@ a {
     border-radius: var(--border-radius);
     display: flex;
 }
-
+/* Note use of flex grow, what does it do exactly? */
 .input-group .input {
     border: 0;
     flex-grow: 1;
@@ -296,13 +292,12 @@ a {
 }
 
 /* Cards */
-
 .card {
     border-radius: 7px;
     box-shadow: 0 0 20px 10px #f3f3f3;
     overflow: hidden;
 }
-
+/* what does the comma do again? */
 .card__header,
 .card__body {
     padding: 2rem 3rem;
@@ -322,9 +317,7 @@ a {
     background: #02cdf1;
 }
 
-
 /* Plans */
-
 .plan__name {
     color: #fff;
     margin: 0;
@@ -342,7 +335,7 @@ a {
     opacity: 0.8;
     margin-right: 1rem;
 }
-
+/* Note the use of display: block */
 .plan__description {
     font-size: 2rem;
     font-weight: 300;
@@ -353,7 +346,7 @@ a {
 .plan .list__item {
     margin-bottom: 2rem;
 }
-
+/* use of position relative vs absolute */
 .plan--popular .card__header {
     position: relative;
 }
@@ -402,7 +395,6 @@ a {
 }
 
 /* quote */
-
 .quote {
     font-size: 3rem;
     font-style: italic;
@@ -485,7 +477,7 @@ a {
     top: 3rem;
     right: -32px;
 }
-
+/* Note use of comma */
 @media screen and (min-width: 768px) {
     .testimonial .quote,
     .testimonial .quote__author {
@@ -497,7 +489,6 @@ a {
 }
 
 /* Callouts */
-
 .callout {
     padding: 4rem;
     border-radius: 5px;
@@ -522,7 +513,7 @@ a {
 .callout__content {
     text-align: center;
 }
-
+/* Note use of gride-template-columns */
 @media screen and (min-width: 768px) {
     .callout .grid--1x2 {
         grid-template-columns: 1fr auto;
