--- a/components/testimonials.html
+++ b/components/testimonials.html
@@ -1,4 +1,4 @@
-<div class="card testimional">
+<div class="card testimonal">
   <div class="grid grid--1x2">
     <div class="testimonial__image">
       <img src="images/testimonial.jpg" alt="A happy smiling customer" />
