--- a/css/styles.css
+++ b/css/styles.css
@@ -448,7 +448,6 @@ a {
 }
 
 /* Grids */
-
 .grid {
     display: grid;
 }
@@ -598,4 +597,69 @@ the whole page, max-height limits the height. */
 .container {
     max-width: 1140px;
     margin: 0 auto;
+}
+
+/* Navigation Bar */
+/* what does flew-wrap do here? */
+.nav {
+    background: #000;
+    display: flex;
+    justify-content:space-between;
+    flex-wrap: wrap;
+    padding: 0 1rem;
+    align-items: center;
+}
+
+.nav__list {
+    width: 100%;
+    margin: 0;
+}
+
+.nav__item {
+    padding: .5rem 2rem;
+    border-bottom: 1px solid #222;
+}
+/* Font color for link have their own styling, so to change color you must assign it 
+to the anchor element. Not sure why? */
+.nav__item > a {
+    color: #d2d0db;
+    transition: color 0.3sec;
+}
+.nav__item > a:hover {
+    color: #fff;
+}
+
+.nav__toggler {
+    opacity: 0.5;
+    transition: box-shadow .15s;
+    cursor: pointer;
+}
+/* Note that we didn't leave any space between .nav and .collapsible--expanded,
+that is a double class selector. We're selecting an element that has both of these classes.*/
+.nav.collapsible--expanded .nav__toggler{
+    opacity:1;
+    box-shadow: 0 0 0 2px #666;
+    border-radius: 5px;
+}
+
+.nav__brand {
+    transform: translateY(5px);
+}
+
+@media screen and (min-width: 768px) {
+    .nav__toggler {
+        display: none;
+    }
+
+    .nav__list {
+        width: auto;
+        display: flex;
+        font-size: 1.6rem;
+        max-height: 100%;
+        opacity: 1;
+    }
+
+    .nav__item {
+        border: 0;
+    }
 }
