--- a/components/blocks.html
+++ b/components/blocks.html
@@ -15,7 +15,7 @@
     </div>
   </div>
 </section>
-<section class="block block--dark block--skewed-right">
+<section class="block block--dark block--skewed-left">
   <div class="container">
     <h2 class="block__heading">Heading</h2>
     <p>
