--- a/components/hero.html
+++ b/components/hero.html
@@ -5,6 +5,17 @@
       <p class="hero__tagline">Deploy your websites in less than 60 seconds</p>
       <a href="" class="btn btn--accent btn--stretched">Get Started</a>
     </header>
-    <img class="hero__image" src="images/banner.png" alt="" />
+    <picture>
+      <!-- How does the picture element work with the source element? 
+        What is srcset versus src?
+      Why do we add another source for png on top of the webp?  -->
+      <source
+        type="image/webp"
+        srcset="images/banner.webp 1x, images/banner@2x.webp 2x" />
+      <source
+        type="image/png"
+        srcset="images/banner.png 1x, images/banner@2x.png 2x" />
+      <img class="hero__image" src="images/banner.png" alt=""
+    /></picture>
   </div>
 </section>
