fixed inputgroups code. Inside div & btn on right.

--- a/components/inputgroups.html
+++ b/components/inputgroups.html
@@ -1,3 +1,4 @@
-<button class="btn btn--accent">Search</button>
-<input class="input" type="text" placeholder="Enter domain name here..." />
-<!-- need to add input-group? -->
+<div class="input-group">
+  <input class="input" type="text" placeholder="Enter domain name here..." />
+  <button class="btn btn--accent">Search</button>
+</div>
