--- a/components/domain_block.html
+++ b/components/domain_block.html
@@ -1,9 +1,14 @@
-<div class="input-group">
-    <input
-      class="input"
-      type="text"
-      placeholder="Enter domain name here..."
-    />
+<section class="block container block-domain">
+  <header class="block__header">
+    <h2>Starting at $9 per month</h2>
+    <p>
+      Lorem ipsum dolor sit, amet consectetur adipisicing elit. Exercitationem,
+      animi. Nesciunt recusandae veritatis eum hic assumenda excepturi
+      doloribus, tempora quidem.
+    </p>
+  </header>
+  <div class="input-group">
+    <input class="input" type="text" placeholder="Enter domain name here..." />
     <button class="btn btn--accent">
       <svg class="icon icon--white">
         <use xlink:href="images/sprite.svg#search"></use></svg
