--- a/components/domain_block.html
+++ b/components/domain_block.html
@@ -14,6 +14,7 @@
         <use xlink:href="images/sprite.svg#search"></use></svg
       >Search
     </button>
+    <!-- why is everything in red?? -->
   </div>
   <ul class="list block-domain__prices">
     <li><span class="badge badge--secondary">.com $9</span></li>
