--- a/css/styles.css
+++ b/css/styles.css
@@ -251,6 +251,7 @@ a {
 .btn--outline:hover {
     background: var(--color-headings);
     border: 2px solid var(--color-headings);
+    color: #fff;
 }
 
 .btn--stretched {
@@ -306,6 +307,7 @@ a {
     box-shadow: 0 0 20px 10px #f3f3f3;
     overflow: hidden;
 }
+
 /* what does the comma do again? */
 .card__header,
 .card__body {
@@ -322,11 +324,19 @@ a {
     color: #fff;
 }
 
+.card--primary .badge--primary {
+    background: #126de4;
+}
+
 .card--secondary .badge--secondary {
     background: #02cdf1;
 }
 
 /* Plans */
+.plan {
+    transition: transform 0.2s ease-out;
+}
+
 .plan__name {
     color: #fff;
     margin: 0;
@@ -356,6 +366,10 @@ a {
     margin-bottom: 2rem;
 }
 /* use of position relative vs absolute */
+.plan--popular {
+    transform: scale(1.1);
+}
+
 .plan--popular .card__header {
     position: relative;
 }
@@ -367,6 +381,14 @@ a {
     position: absolute;
     top: -6px;
     right: 5%;
+}
+
+.plan:hover {
+    transform: scale(1.05);
+}
+
+.plan--popular:hover {
+    transform: scale(1.15);
 }
 
 @media screen and (min-width: 1024px) {
@@ -725,5 +747,23 @@ Also note the setting of margin to 0 for vertical and auto for horizontal
 @media screen and (min-width: 768px) {
     .block-domain__prices {
         grid-template-columns: repeat(auto-fit, minmax(10rem, 1fr));
+    }
+}
+
+/* Plans Block */
+.block-plans .grid{
+    gap: 8rem 4rem;
+    align-items: center;
+}
+
+.block-plans .card {
+    max-width: 500px;
+    margin: 0 auto
+}
+
+@media screen and (min-width: 1040px) {
+    .block-plans .grid{
+        grid-template-columns: repeat(3, 1fr);
+
     }
 }
