--- a/components/navbar.html
+++ b/components/navbar.html
@@ -1,5 +1,5 @@
 <body>
-  <nav class="nav collapsible">
+  <nav class="nav-collapsible">
     <a href="/"><img src="images/logo.svg" alt="" /></a>
     <svg class="icon icon--white nav__toggler">
       <use xlink:href="images/sprite.svg#menu"></use>
