--- a/components/callouts.html
+++ b/components/callouts.html
@@ -1,14 +1,16 @@
-<div class="callout callout--primary">
-  <div class="grid grid--1x2">
-    <div class="callout__content">
-      <h2 class="callout__heading">Ready to Get Started?</h2>
-      <p>
-        Lorem, ipsum dolor sit amet consectetur adipisicing elit. Commodi sed
-        architecto nobis cum labore incidunt maiores dolorum expedita nemo vitae
-        voluptatem modi distinctio explicabo totam, cumque dolorem atque!
-        Voluptatem, maxime.
-      </p>
+<div class="container">
+  <div class="callout callout--primary">
+    <div class="grid grid--1x2">
+      <div class="callout__content">
+        <h2 class="callout__heading">Ready to Get Started?</h2>
+        <p>
+          Lorem, ipsum dolor sit amet consectetur adipisicing elit. Commodi sed
+          architecto nobis cum labore incidunt maiores dolorum expedita nemo
+          vitae voluptatem modi distinctio explicabo totam, cumque dolorem
+          atque! Voluptatem, maxime.
+        </p>
+      </div>
+      <a href="#" class="btn btn--secondary btn--stretched">Get Started</a>
     </div>
-    <a href="#" class="btn btn--secondary btn--stretched">Get Started</a>
   </div>
 </div>
