--- a/components/domain_block.html
+++ b/components/domain_block.html
@@ -11,8 +11,9 @@
     <input class="input" type="text" placeholder="Enter domain name here..." />
     <button class="btn btn--accent">
       <svg class="icon icon--white">
-        <use xlink:href="images/sprite.svg#search"></use></svg
-      >Search
+        <use xlink:href="images/sprite.svg#search"></use>
+      </svg>
+      Search
     </button>
     <!-- why is everything in red?? -->
   </div>
