--- a/components/features_block.html
+++ b/components/features_block.html
@@ -1,89 +1,96 @@
 <section class="block container">
-    <header class="block__header">
-      <h2 class="block__heading">Host on the cloud to keep growing</h2>
+  <header class="block__header">
+    <h2 class="block__heading">Host on the cloud to keep growing</h2>
+    <p>
+      Lorem ipsum dolor sit amet consectetur adipisicing elit. Atque aspernatur
+      vel aliquam ab? Reiciendis tenetur neque ex facere debitis explicabo?
+    </p>
+  </header>
+  <article class="grid grid--1x2 feature">
+    <div class="feature__content">
+      <span class="icon-container">
+        <svg class="icon icon--primary">
+          <use xlink:href="images/sprite.svg#easy"></use>
+        </svg>
+      </span>
+      <h3 class="feature__heading">Super Easy to Use</h3>
       <p>
-        Lorem ipsum dolor sit amet consectetur adipisicing elit. Atque aspernatur
-        vel aliquam ab? Reiciendis tenetur neque ex facere debitis explicabo?
+        Lorem ipsum dolor sit amet consectetur adipisicing elit. Error
+        accusantium facere ea, ducimus culpa quas labore temporibus blanditiis.
       </p>
-    </header>
-    <article class="grid grid--1x2 feature">
-      <div class="feature__content">
-        <span class="icon-container">
-          <svg class="icon icon--primary">
-            <use xlink:href="images/sprite.svg#easy"></use>
-          </svg>
-        </span>
-        <h3 class="feature__heading">Super Easy to Use</h3>
-        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Error accusantium facere ea, ducimus culpa quas labore temporibus blanditiis.</p>
-        <a href="#" class="link-arrow">Learn More</a>
-      </div>
-      <div class="block-easy">
-        <picture>
-          <!-- How does the picture element work with the source element? 
+      <a href="#" class="link-arrow">Learn More</a>
+    </div>
+    <div class="block-easy">
+      <picture>
+        <!-- How does the picture element work with the source element? 
             What is srcset versus src?
           Why do we add another source for png on top of the webp?  -->
-          <source
-            type="image/webp"
-            srcset="images/easy.webp 1x, images/easy@2x.webp 2x" />
-          <source
-            type="image/jpg"
-            srcset="images/easy.jpg 1x, images/easy@2x.jpg 2x" />
-          <img class="feature__image" src="images/easy.jpg" alt=""
-        /></picture>
-      </div>
-    </article>
-    <article class="grid grid--1x2 feature">
-      <div class="feature__content">
-        <span class="icon-container">
-          <svg class="icon icon--primary">
-            <use xlink:href="images/sprite.svg#computer"></use>
-          </svg>
-        </span>
-        <h3 class="feature__heading">Simply Fast Websites</h3>
-        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Error accusantium facere ea, ducimus culpa quas labore temporibus blanditiis.</p>
-        <a href="#" class="link-arrow">Learn More</a>
-      </div>
-      <div class="feature-fast">
-        <picture>
-          <!-- How does the picture element work with the source element? 
+        <source
+          type="image/webp"
+          srcset="images/easy.webp 1x, images/easy@2x.webp 2x" />
+        <source
+          type="image/jpg"
+          srcset="images/easy.jpg 1x, images/easy@2x.jpg 2x" />
+        <img class="feature__image" src="images/easy.jpg" alt=""
+      /></picture>
+    </div>
+  </article>
+  <article class="grid grid--1x2 feature">
+    <div class="feature__content">
+      <span class="icon-container">
+        <svg class="icon icon--primary">
+          <use xlink:href="images/sprite.svg#computer"></use>
+        </svg>
+      </span>
+      <h3 class="feature__heading">Simply Fast Websites</h3>
+      <p>
+        Lorem ipsum dolor sit amet consectetur adipisicing elit. Error
+        accusantium facere ea, ducimus culpa quas labore temporibus blanditiis.
+      </p>
+      <a href="#" class="link-arrow">Learn More</a>
+    </div>
+    <div class="feature-fast">
+      <picture>
+        <!-- How does the picture element work with the source element? 
             What is srcset versus src?
           Why do we add another source for png on top of the webp?  -->
-          <source
-            type="image/webp"
-            srcset="images/fast.webp 1x, images/fast@2x.webp 2x" />
-          <source
-            type="image/jpg"
-            srcset="images/fast.jpg 1x, images/fast@2x.jpg 2x" />
-          <img class="feature__image" src="images/fast.jpg" alt=""
-        /></picture>
-      </div>
-    </article>
-    <article class="grid grid--1x2 feature">
-      <div class="feature__content">
-        <span class="icon-container">
-          <svg class="icon icon--primary">
-            <use xlink:href="images/sprite.svg#wordpress"></use>
-          </svg>
-        </span>
-        <h3 class="feature__heading">Wordpress Made Easy</h3>
-        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Error accusantium facere ea, ducimus culpa quas labore temporibus blanditiis.</p>
-        <a href="#" class="link-arrow">Learn More</a>
-      </div>
-      <div class="block-wordpress">
-        <picture>
-          <!-- How does the picture element work with the source element? 
+        <source
+          type="image/webp"
+          srcset="images/fast.webp 1x, images/fast@2x.webp 2x" />
+        <source
+          type="image/jpg"
+          srcset="images/fast.jpg 1x, images/fast@2x.jpg 2x" />
+        <img class="feature__image" src="images/fast.jpg" alt=""
+      /></picture>
+    </div>
+  </article>
+  <article class="grid grid--1x2 feature">
+    <div class="feature__content">
+      <span class="icon-container">
+        <svg class="icon icon--primary">
+          <use xlink:href="images/sprite.svg#wordpress"></use>
+        </svg>
+      </span>
+      <h3 class="feature__heading">Wordpress Made Easy</h3>
+      <p>
+        Lorem ipsum dolor sit amet consectetur adipisicing elit. Error
+        accusantium facere ea, ducimus culpa quas labore temporibus blanditiis.
+      </p>
+      <a href="#" class="link-arrow">Learn More</a>
+    </div>
+    <div class="block-wordpress">
+      <picture>
+        <!-- How does the picture element work with the source element? 
             What is srcset versus src?
           Why do we add another source for png on top of the webp?  -->
-          <source
-            type="image/webp"
-            srcset="images/wordpress.webp 1x, images/wordpress@2x.webp 2x" />
-          <source
-            type="image/jpg"
-            srcset="images/wordpress.jpg 1x, images/wordpress@2x.jpg 2x" />
-          <img class="feature__image" src="images/wordpress.jpg" alt=""
-        /></picture>
-      </div>
-    </article>
-  </section>
-    <script src="js/main.js"></script>
-  </section>
+        <source
+          type="image/webp"
+          srcset="images/wordpress.webp 1x, images/wordpress@2x.webp 2x" />
+        <source
+          type="image/jpg"
+          srcset="images/wordpress.jpg 1x, images/wordpress@2x.jpg 2x" />
+        <img class="feature__image" src="images/wordpress.jpg" alt=""
+      /></picture>
+    </div>
+  </article>
+</section>
