--- a/css/styles.css
+++ b/css/styles.css
@@ -203,7 +203,7 @@ a {
     font-weight: 600;
     margin: 1rem 0;
     outline: 0;
-    padding: 2rem 3rem;
+    padding: 2rem 4vw;
     text-align: center;
     text-transform: capitalize;
     white-space: nowrap;
@@ -295,6 +295,7 @@ a {
     border: 0;
     flex-grow: 1;
     padding: 1.5rem 2rem;
+    width: 0;
 }
 
 .input-group .btn {
@@ -494,6 +495,9 @@ a {
     .grid--1x2 {
         grid-template-columns: 1fr 1fr;
     }
+    .grid--1x3 {
+        grid-template-columns: 1fr 1fr 1fr;
+    }
 }
 
 /* Testimonials */
@@ -529,6 +533,10 @@ a {
 .callout {
     padding: 4rem;
     border-radius: 5px;
+}
+
+.callout-signup {
+    transform: translateY(5rem);
 }
 
 .callout--primary {
@@ -627,12 +635,12 @@ the whole page, max-height limits the height. */
 }
 
 .block--skewed-right {
-    padding-bottom: calc(var(--padding-vertical)) + 4rem;
+    padding-bottom: calc(var(--padding-vertical) + 4rem);
     clip-path: polygon(0% 0%, 100% 0%, 100% 100%, 0% 90%);
 }
 .block--skewed-left {
-    padding-bottom: calc(var(--padding-vertical)) + 4rem;
-    clip-path: polygon(0% 0%, 100% 0%, 100% 80%, 0% 100%);
+    padding-bottom: calc(var(--padding-vertical) + 4rem);
+    clip-path: polygon(0% 0%, 100% 0%, 100% 95%, 0% 100%);
 }
 
 .container {
@@ -664,7 +672,7 @@ the whole page, max-height limits the height. */
 to the anchor element. Not sure why? */
 .nav__item > a {
     color: #d2d0db;
-    transition: color 0.3sec;
+    transition: color .3s;
 }
 .nav__item > a:hover {
     color: #fff;
@@ -677,7 +685,7 @@ to the anchor element. Not sure why? */
 }
 /* Note that we didn't leave any space between .nav and .collapsible--expanded,
 that is a double class selector. We're selecting an element that has both of these classes.*/
-.nav.collapsible--expanded .nav__toggler{
+.nav .collapsible--expanded .nav__toggler{
     opacity: 1;
     box-shadow: 0 0 0 2px #666;
     border-radius: 5px;
@@ -741,11 +749,12 @@ that is a double class selector. We're selecting an element that has both of the
 Also note the setting of margin to 0 for vertical and auto for horizontal
  */
 .block-domain__prices {
+    color: var(--color-headings);
     display: grid;
-    grid-template-columns: repeat(3, 1fr);
+    grid-template-columns: repeat(2, 1fr);
     grid-template-rows: repeat(2, 6rem);
     font-size: 2rem;
-    font-weight: 6rem;
+    font-weight: 600;
     justify-items: center;
     max-width: 700px;
     margin: 0 auto;
@@ -759,6 +768,7 @@ Also note the setting of margin to 0 for vertical and auto for horizontal
 
 /* Plans Block */
 .block-plans .grid {
+/* what's gap exactly */
     gap: 8rem 4rem;
     align-items: center;
 }
@@ -819,7 +829,7 @@ Also note the setting of margin to 0 for vertical and auto for horizontal
 
 .footer a {
     color: #777;
-    transition: color .3sec;
+    transition: color .3s;
 }
 
 .footer a:hover {
